<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_story_map">


    <fragment
        android:id="@+id/navigation_story_list"
        android:name="com.daffa.storyappcarita.ui.list.ListFragment"
        android:label="@string/story_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_story_map"
        android:name="com.daffa.storyappcarita.ui.map.MapFragment"
        android:label="@string/story_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_story_setting"
        android:name="com.daffa.storyappcarita.ui.setting.SettingFragment"
        android:label="@string/story_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>